--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
@@ -20,6 +14,28 @@
 
 .App-intro {
   font-size: large;
+}
+
+.App-header a {
+  margin: 5px;
+  color: white;
+}
+
+.App-header a:active {
+  color: #bbb;
+} 
+
+.App .main {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.App form p {
+  text-align: right
+}
+
+.App form p input {
+  font-size: 1.1em
 }
 
 @keyframes App-logo-spin {
