--- a/client/src/App.css
+++ b/client/src/App.css
@@ -100,6 +100,16 @@ form input[type=submit] {
   max-width: 280px;
 }
 
+.extraSearch input[type=text] {
+  max-width: 200px;
+  display: inline-block;
+  margin-bottom: 0.75em;
+}
+.extraSearch label {
+  margin-top: 1em;
+  display: block;
+}
+
 .restaurants {
   display: block;
   padding: 1em 5em;
@@ -118,5 +128,12 @@ form input[type=submit] {
   color: #b4ff00
 }
 
-
+.toolbar a {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  padding: 5px;
+  background-color: lightgrey;
+  border-radius: 10px;
+  border: 2px solid #9e9e9e;
+}
 
